WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216015
Missing exception check while handling the onbeforeunload event.
https://bugs.webkit.org/show_bug.cgi?id=216015
Summary
Missing exception check while handling the onbeforeunload event.
Mark Lam
Reported
2020-08-31 14:48:13 PDT
<
rdar://problem/66324934
>
Attachments
proposed patch.
(5.19 KB, patch)
2020-08-31 15:06 PDT
,
Mark Lam
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2020-08-31 15:06:14 PDT
Created
attachment 407629
[details]
proposed patch.
Mark Lam
Comment 2
2020-08-31 19:42:31 PDT
Comment on
attachment 407629
[details]
proposed patch. Thanks for the review. Landing now.
EWS
Comment 3
2020-08-31 19:45:13 PDT
Committed
r266383
: <
https://trac.webkit.org/changeset/266383
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 407629
[details]
.
Radar WebKit Bug Importer
Comment 4
2020-08-31 19:46:03 PDT
<
rdar://problem/68115033
>
Mark Lam
Comment 5
2020-08-31 19:46:46 PDT
<
rdar://problem/66324934
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug