Missing exception check while handling the onbeforeunload event. https://bugs.webkit.org/show_bug.cgi?id=216015 <rdar://problem/66324934>

Reviewed by Saam Barati.

Source/WebCore:

Test: js/dom/missing-exception-check-while-handling-onbeforeunload.html

* bindings/js/JSEventListener.cpp:
(WebCore::JSEventListener::handleEvent):

LayoutTests:

* js/dom/missing-exception-check-while-handling-onbeforeunload-expected.txt: Added.
* js/dom/missing-exception-check-while-handling-onbeforeunload.html: Added.


Canonical link: https://commits.webkit.org/228818@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266383 268f45cc-cd09-0410-ab3c-d52691b4dbfc